--- a/.github/workflows/python_scripts.yml
+++ b/.github/workflows/python_scripts.yml
@@ -15,10 +15,10 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8  
+        python-version: 3.9  
 
     - name: Install dependencies
-      run: pip install pandas numpy tabulate re
+      run: pip install pandas numpy tabulate
 
     - name: Run Python script
       run: python additional_scripts/csv_to_markdowns/main_leaderboard.py 
