--- a/.github/workflows/python_scripts.yml
+++ b/.github/workflows/python_scripts.yml
@@ -30,4 +30,4 @@ jobs:
         git checkout main
         git add additional_scripts/output_markdowns/main_leaderboard.md
         git commit -m "Update main_leaderboard.md"
-        git push
+        git push https://<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>@github.com/kushal-10/temp2.github.io.git main
