--- a/.github/workflows/python_scripts.yml
+++ b/.github/workflows/python_scripts.yml
@@ -1,26 +1,9 @@
-name: Run Python script on push
+name: Update Main Leaderboard
 
-on:
-  push:
-    branches: [ main ]  # Adjust the branch name as needed
+on: [push]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-  
 jobs:
-  build:
+  run:
     runs-on: ubuntu-latest
 
     steps:
@@ -30,48 +13,20 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9  
+        python-version: '3.x' # Replace with your desired Python version
 
     - name: Install dependencies
-      run: pip install pandas numpy tabulate
+      run: |
+        python -m pip install --upgrade pip
+        pip install pandas
 
-    - name: Run Python script
-      run: python additional_scripts/csv_to_markdowns/main_leaderboard.py 
+    - name: Run the Python script
+      run: python path/to/your/script.py
 
-    # This workflow uses actions that are not certified by GitHub.
-    # They are provided by a third-party and are governed by
-    # separate terms of service, privacy policy, and support
-    # documentation.
-
-
-    - name: Checkout
-      uses: actions/checkout@v3
-    - name: Setup Ruby
-      uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
-      with:
-        ruby-version: '3.1' # Not needed with a .ruby-version file
-        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-        cache-version: 0 # Increment this number if you need to re-download cached gems
-    - name: Setup Pages
-      id: pages
-      uses: actions/configure-pages@v3
-    - name: Build with Jekyll
-      # Outputs to the './_site' directory by default
-      run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
-      env:
-        JEKYLL_ENV: production
-    - name: Upload artifact
-      # Automatically uploads an artifact from the './_site' directory by default
-      uses: actions/upload-pages-artifact@v2
-
-  # Deployment job
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
+    - name: Commit files
+      run: |
+        git config --global user.name "kushal-10"
+        git config --global user.email "kushalkoshti11@gmail.com"
+        git add .
+        git diff --quiet && git diff --staged --quiet || git commit -m "Update main_leaderboard.md"
+        git push https://<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>@github.com/kushal-10/temp2.github.io.git main
