--- a/.github/workflows/python_scripts.yml
+++ b/.github/workflows/python_scripts.yml
@@ -13,15 +13,15 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x' # Replace with your desired Python version
+        python-version: '3.9' # Replace with your desired Python version
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pandas
+        pip install pandas numpy tabulate
 
     - name: Run the Python script
-      run: python path/to/your/script.py
+      run: python additional_scripts/csv_to_markdowns/main_leaderboard.py
 
     - name: Commit files
       run: |
